--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
     </header>
     <div class="hero"></div>
     <content class="content">
-        <article class="contentArticle">
+        <figure class="contentArticle">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search-engine-optimization"/>
             <h2>Search Engine Optimization</h2>
-            <p>
+            <figcaption>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </article>
-        <article class="contentArticle">
+            </figcaption>
+        </figure>
+        <figure class="contentArticle">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation-management" />
             <h2>Online Reputation Management</h2>
-            <p>
+            <figcaption>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </article>
-        <article class="contentArticle">
+            </figcaption>
+        </figure>
+        <figure class="contentArticle">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-marketing" />
             <h2>Social Media Marketing</h2>
-            <p>
+            <figcaption>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </article>
+            </figcaption>
+        </figure>
     </content>
     <aside class="benefits">
         <article id="benefit-lead">
