--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/Search_engine_optimization">Search Engine Optimization</a>
+                    <a href="https://en.wikipedia.org/wiki/Search_engine_optimization" target="blank">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/Reputation_management">Online Reputation Management</a>
+                    <a href="https://en.wikipedia.org/wiki/Reputation_management" target="blank">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="https://buffer.com/social-media-marketing">Social Media Marketing</a>
+                    <a href="https://buffer.com/social-media-marketing" target="blank">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
