--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    
     <header>
         <h1>Hori<span id="seo">seo</span>n</h1>
         <nav>
@@ -24,7 +25,9 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+
+    <div class="mainImage"></div>
+
     <content class="content">
         <figure class="contentArticle">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search-engine-optimization"/>
@@ -48,6 +51,7 @@
             </figcaption>
         </figure>
     </content>
+
     <aside class="benefits">
         <article id="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,12 +75,14 @@
             </p>
         </article>
     </aside>
+
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+
 </body>
 
 </html>
