small changes to elements

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </nav>
     </header>
 
-    <!-- changed semantics to mainImage -->
-    <div class="mainImage"></div>
+    <!-- changed semantics to mainImage and div to figure -->
+    <figure class="mainImage"></figure>
 
     <!-- changed elements to content, figure, figcaption. changed classes to contentArticle -->
     <content class="content">
