--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Horiseon</title>
 </head>
 
@@ -15,13 +15,13 @@
             <ul>
                 <!-- added target="blank", added actual URLs -->
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/Search_engine_optimization" target="blank">Search Engine Optimization</a>
+                    <a href="#seOptimization" target="blank">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/Reputation_management" target="blank">Online Reputation Management</a>
+                    <a href="#orManagement" target="blank">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="https://buffer.com/social-media-marketing" target="blank">Social Media Marketing</a>
+                    <a href="#smMarketing" target="blank">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
 
     <!-- changed elements to content, figure, figcaption. changed classes to contentArticle -->
     <content class="content">
-        <figure class="contentArticle">
+        <figure id="seOptimization">
             <!-- added alts to images -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search-engine-optimization"/>
             <h2>Search Engine Optimization</h2>
@@ -40,14 +40,14 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </figcaption>
         </figure>
-        <figure class="contentArticle">
+        <figure id="orManagement">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation-management" />
             <h2>Online Reputation Management</h2>
             <figcaption>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </figcaption>
         </figure>
-        <figure class="contentArticle">
+        <figure id="smMarketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-marketing" />
             <h2>Social Media Marketing</h2>
             <figcaption>
